--- a/css/app.min.1.css
+++ b/css/app.min.1.css
@@ -15117,8 +15117,11 @@ a.thumbnail.active {
 }
 
 .login-navigation > li:not(:hover) {
-  font-size: 0px;
-  border-radius: 100%;
+  /*font-size: 0px;*/
+  /*border-radius: 100%;*/
+    border-radius: 10px;
+    padding: 0 5px;
+    font-size: 8px;
 }
 
 .login-navigation > li:hover {
